--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,23 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Chat server",
+  "main": "server.ts",
   "scripts": {
-    "dev": "nodemon server.ts"
+    "run": "node server",
+    "dev": "nodemon server"
   },
-  "keywords": [],
-  "author": "",
+  "author": "szgyuszi",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "fastify": "^4.12.0"
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "socket.io": "^4.5.4",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1"
+    "@types/express": "^4.17.16",
+    "nodemon": "^2.0.20"
   }
 }
